deployment/ocp/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nsth-juice-shop
  namespace: aqua-policy-demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nsth-juice-shop
  template:
    metadata:
      labels:
        app: nsth-juice-shop
        app.kubernetes.io/component: nsth-juice-shop
        app.kubernetes.io/name: nsth-juice-shop
        deployment: nsth-juice-shop
    spec:
      containers:
        - name: nsth-juice-shop
          image: docker-dev.nexus.devops.demo/nsth-juice-shop:tag
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: 
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
      imagePullSecrets:
        - name: nexus.devops.demo
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: aqua-demo-sa
      serviceAccount: aqua-demo-sa
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
