deployment/ocp/03-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nsth-juice-shop
  namespace: aqua-policy-demo
  labels:
    app: nsth-juice-shop
    app.kubernetes.io/component: nsth-juice-shop
    app.kubernetes.io/instance: nsth-juice-shop
    app.kubernetes.io/name: nsth-juice-shop
spec:
  host: nsth-juice-shop.apps.prod-01.ocp.nsth.demo
  to:
    kind: Service
    name: nsth-juice-shop
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
